--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ futures = "0.3"
 tower = { version = "0.4", features = ["util"] }
 redis = "0.22.3"
 tokio = { version = "1.25.0", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["cors"] }
+serde = { version = "1.0.152", features = ["derive"] }
