--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ redis = "0.22.3"
 tokio = { version = "1.25.0", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["cors"] }
 serde = { version = "1.0.152", features = ["derive"] }
+sha3 = "0.10.6"
+serde_json = "1.0.93"
+hex = "0.4.3"
