--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ futures = "0.3"
 tower = { version = "0.4", features = ["util"] }
 redis = "0.22.3"
 tokio = { version = "1.25.0", features = ["full"] }
-tower-http = { version = "0.4.0", features = ["cors"] }
+tower-http = { version = "0.4.0", features = ["cors", "add-extension"] }
 serde = { version = "1.0.152", features = ["derive"] }
 sha3 = "0.10.6"
 serde_json = "1.0.93"
