--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 axum = { version = "0.6.9", features = ["ws", "headers"] }
 futures = "0.3"
 tower = { version = "0.4", features = ["util"] }
-redis = "0.22.3"
+redis = { version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"] }
 tokio = { version = "1.25.0", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["cors", "add-extension", "trace"] }
 serde = { version = "1.0.152", features = ["derive"] }
