--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: dorianim/boulder-timer
+          images: ghcr.io/${{ github.repository }}
           tags: type=ref,event=tag
 
       - name: Set up QEMU
