--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ redis = { version = "0.22.3", features = ["aio", "tokio-comp", "connection-manag
 tokio = { version = "1.25.0", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["fs", "full"] }
 serde = { version = "1.0.152", features = ["derive"] }
-sha3 = "0.10.6"
 serde_json = "1.0.93"
 hex = "0.4.3"
 argon2 = "0.4.1"
@@ -24,3 +23,4 @@ jsonwebtoken = "8.2.0"
 tower-service = "0.3.2"
 rust-embed = "6.6.0"
 mime_guess = "2.0.4"
+regex = "1.7.1"
