--- a/client/package.json
+++ b/client/package.json
@@ -36,13 +36,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@felte/reporter-svelte": "^1.1.5",
+		"@felte/validator-yup": "^1.0.11",
 		"@fortawesome/free-brands-svg-icons": "^6.3.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@tailwindcss/forms": "^0.5.3",
+		"felte": "^1.2.7",
 		"screenfull": "^6.0.2",
 		"socket.io": "^4.6.1",
 		"socket.io-client": "^4.6.1",
 		"svelte-fa": "^3.0.3",
-		"tone": "^14.7.77"
+		"tone": "^14.7.77",
+		"yup": "^0.32.11"
 	}
 }
