--- a/client/package.json
+++ b/client/package.json
@@ -42,11 +42,12 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"felte": "^1.2.7",
+		"npm": "^9.6.0",
 		"screenfull": "^6.0.2",
 		"socket.io": "^4.6.1",
 		"socket.io-client": "^4.6.1",
+		"standardized-audio-context": "^25.3.41",
 		"svelte-fa": "^3.0.3",
-		"tone": "^14.7.77",
 		"yup": "^0.32.11"
 	}
 }
