--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"felte": "^1.2.7",
+		"nosleep.js": "^0.12.0",
 		"npm": "^9.6.0",
 		"screenfull": "^6.0.2",
 		"socket.io": "^4.6.1",
