--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "boulder-timer"
-version = "0.1.0"
+name = "distributed-timer"
+version = "1.0.0"
 edition = "2021"
 build = "build.rs"
 
