--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"felte": "^1.2.7",
+		"locally-unique-id-generator": "^0.1.5",
 		"nosleep.js": "^0.12.0",
 		"npm": "^9.6.0",
 		"screenfull": "^6.0.2",
