Feat: support new specs in display

--- a/display/platformio.ini
+++ b/display/platformio.ini
@@ -15,6 +15,9 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder
 build_type = debug
+upload_port = 10.37.91.251/u
+extra_scripts = upload_script.py
+upload_protocol = custom
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.2
 	adafruit/Adafruit GFX Library@^1.10.10
