--- a/display/platformio.ini
+++ b/display/platformio.ini
@@ -8,19 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
-monitor_filters = esp8266_exception_decoder
+monitor_filters = esp32_exception_decoder
 build_type = debug
-upload_port = 10.37.91.251/u
-extra_scripts = upload_script.py
-upload_protocol = custom
+#upload_port = 10.37.91.251/u
+#extra_scripts = upload_script.py
+#upload_protocol = custom
 lib_deps = 
 	bblanchon/ArduinoJson@^6.18.2
 	adafruit/Adafruit GFX Library@^1.10.10
 	adafruit/Adafruit NeoMatrix@^1.2.0
 	links2004/WebSockets@^2.3.7
 	https://github.com/tzapu/WiFiManager.git
+	mrfaptastic/ESP32 HUB75 LED MATRIX PANEL DMA Display@^3.0.8
