Feat: finalize hub75 display

--- a/display/.vscode/settings.json
+++ b/display/.vscode/settings.json
@@ -10,6 +10,7 @@
         "ostream": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "ctime": "cpp"
     }
 }
