Fix: display showing 00:00 when more than four segments are used

--- a/display/platformio.ini
+++ b/display/platformio.ini
@@ -8,13 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:lolin_d32_pro]
 platform = espressif32
-board = esp32dev
+board = lolin_d32_pro
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 build_type = debug
+build_flags =
+	-mfix-esp32-psram-cache-issue
+#	-D CORE_DEBUG_LEVEL=4
+#	-D DEBUG
 #upload_port = 10.37.91.251/u
 #extra_scripts = upload_script.py
 #upload_protocol = custom
